--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/KeerthikaUvarajan/Movie-genre/issues"
   },
-  "homepage": "https://github.com/KeerthikaUvarajan/Movie-genre#readme"
+  "homepage": "https://github.com/KeerthikaUvarajan/Movie-genre#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "nodemon": "^1.18.9"
+  }
 }
